LU-7778 osd: check if the object is destroyed

Do not do reference increase, if the object is
estroyed.

Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I260f9850fe325b8a5bc5693bc3e25a84eeec6da7
Reviewed-on: http://review.whamcloud.com/18509
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>